tests/models/struct/unnamed/i64/pass/gt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(gt = 2)]
    i64
);
fn main() {}
